--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "GridManager": "^2.4.2",
+    "bootstrap": "3.3.7",
     "jquery": "^3.3.1",
     "leancloud-storage": "^3.6.0",
-    "bootstrap": "3.3.7"
+    "qiniu": "^7.1.3"
   },
   "devDependencies": {}
 }
